--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 </head>
 <body id="back"></body>
 
+<header class="navbar">
+    <div class="logo">Умный Масса-Набор</div>
+
+    <nav class="menu">
+        <a href="#title">Главная</a>
+        <a>Отзывы</a>
+        <a href="#buy">Купить</a>
+    </nav>
+</header>
+
 <body>
-    <h1 id="title">Умный Массанабор</h1>
+    <h1 id="title">Умный Масса-Набор</h1>
     <h3 id="subtitle">Научный подход к набору мышечной массы</h3>
     <h4 id="description">Персонализированная программа тренировок и питания</h4>
 </body>
@@ -18,12 +28,11 @@
 <!--Кнопка--> 
 <button class="beautiful-button">Подробнее</button>
 
-
-<body>
-    <h1 id="title_2">Умный Масса-Набор</h1>
+<body> 
+    <h1 id="title_2" id="tyt">Умный Масса-Набор</h1>
     <p id="text_1">Умный Масса-Набор — система для тех, кто хочет набирать чистую мышечную массу, а не случайный вес.
     Это не просто тренировки. Это алгоритм роста, созданный по принципам спортивной физиологии, прогрессии нагрузки и умного питания.
-    Набери +6…+12 кг мышц за 90 дней — без жира, без перетренировок, без хаоса.</p>
+    Набери +6…+12 кг мышц за 90 дней — без жира, без перетренировок, без хаоса.</p> 
 </body>
 
 <body>
@@ -68,7 +77,7 @@
 </body>
 
 
-<div class="card">
+<div class="card" id="buy">
     <div class="card__border"></div>
     <div class="card_title__container">
     <span class="card_title">Умный Масса-Набор</span>
